model.html edited

--- a/model.html
+++ b/model.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>events</title>
+        <link rel="icon" href="img/date.png">
+    </head>
+    <body bgcolor="black" style="color: beige;">
+        <center>
+        <h1>Upcoming Events📅</h1>
+        <p>Don't miss any of your important events. Stay updated.</p>
+        
+    </center>
+    <hr>
+    <p>
+        Ladies and gentlemen, the moment we've all been waiting for has arrived – Harris Jayaraj, the maestro himself, is ready to set Chennai ablaze with his first concert in a decade! Imagine the energy of back-to-back sold-out shows igniting a chain reaction of sheer musical brilliance. If you follow his Music, you know that Harris Jayaraj's melodies are woven into the very fabric of your soul. His tunes resonate through the valleys of our emotions, and now, as he prepares to take the stage live, it's a golden opportunity to witness the epitome of concert magic. Secure your tickets now, and be a part of history in the making.
 
+    </p>
+    <center>
+    <img src="img/harris.jpg" alt="rock on harris" width="400px">
+    <h1>Music Concert</h1>
+
+    <h2>Tickets starts from Rs.2000 | Food Passes | Outside food not allowed </h2>
+    <p>We wouldn’t want anyone to miss out on this amazing experience. A few things to keep in mind though, Children 5 and above age will require a ticket. Due to the live performance event, all parents/guardians are requested to bring their kids at their discretion. If you are under the age of 16, you will need to be accompanied by an adult guardian.</p>
+</center>
+<center>
+   <h2> <a href="https://insider.in/rock-on-harris-live-in-concert-20-chennai-feb3-2024/event">Get your tickets now</a>
+   </h2>
+   <p>Please note that all registrations and tickets are exclusively available on Paytm Insider. Beware of unauthorized parties claiming to issue tickets. Tickets purchased or secured from other sources will not be valid.</p>
+</center>
+<hr>
+<center>
+<h1>Venue</h1>
+<h3>YMCA Ground, Nandanam
+    26HR+324, Y.M.C.A College of Physical Education, Nandanam, Chennai, Tamil Nadu 600035, India</h3>
+</center>
+
+    </body>
+</html>
